// Vitest Snapshot v1

exports[`Task: dependency-install > install custom dependencies 1`] = `
"[STARTED] Install dependencies
[DATA] Install dependencies from config
[DATA] Installing dependency fs-extra...
[DATA] Installing devDependency @types/node...
[DATA] Installing devDependency @typescript-eslint/eslint-plugin...
[DATA] Installing devDependency @typescript-eslint/parser...
[DATA] Installing devDependency eslint...
[DATA] Installing devDependency eslint-config-prettier...
[DATA] Installing devDependency eslint-plugin-prettier...
[DATA] Installing devDependency prettier...
[DATA] Installing devDependency typescript...
[DATA] Installing devDependency tmp...
[SUCCESS] Install dependencies
"
`;

exports[`Task: dependency-install > install required dependencies 1`] = `
"[STARTED] Install dependencies
[DATA] Installing devDependency @types/node...
[DATA] Installing devDependency @typescript-eslint/eslint-plugin...
[DATA] Installing devDependency @typescript-eslint/parser...
[DATA] Installing devDependency eslint...
[DATA] Installing devDependency eslint-config-prettier...
[DATA] Installing devDependency eslint-plugin-prettier...
[DATA] Installing devDependency prettier...
[DATA] Installing devDependency typescript...
[SUCCESS] Install dependencies
"
`;

exports[`Task: dependency-install > postInstall hook from user config 1`] = `
"[STARTED] Install dependencies
[DATA] Install dependencies from config
[DATA] Run postInstall hook from config
[DATA] Installing devDependency @types/node...
[DATA] Installing devDependency @typescript-eslint/eslint-plugin...
[DATA] Installing devDependency @typescript-eslint/parser...
[DATA] Installing devDependency eslint...
[DATA] Installing devDependency eslint-config-prettier...
[DATA] Installing devDependency eslint-plugin-prettier...
[DATA] Installing devDependency prettier...
[DATA] Installing devDependency typescript...
[DATA] Installing devDependency fs-extra...
[SUCCESS] Install dependencies
"
`;

exports[`Task: dependency-install > show failed deps 1`] = `
"Could not install the following packages as dependencies:
this-is-not-existed
Please try again or install manually as dependencies in your project.
Could not install the following packages as devDependencies:
this-would-fail
Please try again or install manually as devDependencies in your project."
`;

exports[`Task: dependency-install > skip install custom dependencies 1`] = `
"[STARTED] Install dependencies
[SKIPPED] Install dependencies
"
`;

exports[`Task: dependency-install > skip install required dependencies 1`] = `
"[STARTED] Install dependencies
[SKIPPED] Install dependencies
"
`;
